--- a/WotPersonalDataCollector/WotPersonalDataCollector.csproj
+++ b/WotPersonalDataCollector/WotPersonalDataCollector.csproj
@@ -24,4 +24,9 @@
 			<_Parameter1>WotPersonalDataCollectorTests</_Parameter1>
 		</AssemblyAttribute>
 	</ItemGroup>
+	<ItemGroup>
+		<AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+			<_Parameter1>DynamicProxyGenAssembly2</_Parameter1>
+		</AssemblyAttribute>
+	</ItemGroup>
 </Project>
