--- a/WotPersonalDataCollector/WotPersonalDataCollector.csproj
+++ b/WotPersonalDataCollector/WotPersonalDataCollector.csproj
@@ -4,6 +4,9 @@
     <AzureFunctionsVersion>v4</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
+    <Content Remove="C:\Users\Przemyslaw Szewczak\.nuget\packages\microsoft.azure.cosmos\3.30.1\contentFiles\any\netstandard2.0\ThirdPartyNotice.txt" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Guard.Net" Version="3.0.0" />
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.30.1" />
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
