--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 .idea/*
 WotPersonalDataCollectorTests/bin/*
 WotPersonalDataCollectorTests/obj/*
+WotPersonalDataCollectorWebApp.UnitTests/bin/*
+WotPersonalDataCollectorWebApp.UnitTests/obj/*
 WotPersonalDataCollector.sln.DotSettings.user
 WotPersonalDataCollectorWebApp/Properties/launchSettings.json
 WotPersonalDataCollectorWebApp/wwwroot/lib/jquery/LICENSE.txt
