--- a/WotPersonalDataCollectorWebApp.UnitTests/WotPersonalDataCollectorWebApp.UnitTests.csproj
+++ b/WotPersonalDataCollectorWebApp.UnitTests/WotPersonalDataCollectorWebApp.UnitTests.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
     <IsPackable>false</IsPackable>
@@ -10,16 +11,17 @@
   <ItemGroup>
     <PackageReference Include="Any" Version="8.0.1" />
     <PackageReference Include="FluentAssertions" Version="6.7.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
     <PackageReference Include="NSubstitute" Version="4.4.0" />
-    <PackageReference Include="NUnit" Version="3.13.2" />
-    <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
-    <PackageReference Include="coverlet.collector" Version="3.1.0" />
+    <PackageReference Include="NUnit" Version="3.13.3" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
+    <PackageReference Include="NUnit.Analyzers" Version="3.3.0" />
+    <PackageReference Include="coverlet.collector" Version="3.1.2" />
     <PackageReference Include="TddXt.Any.Extensibility" Version="6.7.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\WotPersonalDataCollector\WotPersonalDataCollector.csproj" />
+    <ProjectReference Include="..\WotPersonalDataCollectorWebApp\WotPersonalDataCollectorWebApp.csproj" />
   </ItemGroup>
 
 </Project>
