--- a/WotPersonalDataCollectorWebApp/WotPersonalDataCollectorWebApp.csproj
+++ b/WotPersonalDataCollectorWebApp/WotPersonalDataCollectorWebApp.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
@@ -17,6 +17,7 @@
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.8" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.8" />
         <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.30.1" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Cosmos" Version="6.0.9" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.8" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.8" />
     </ItemGroup>
