--- a/WotPersonalDataCollectorWebApp.UnitTests/WotPersonalDataCollectorWebApp.UnitTests.csproj
+++ b/WotPersonalDataCollectorWebApp.UnitTests/WotPersonalDataCollectorWebApp.UnitTests.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\WotPersonalDataCollectorWebApp\WotPersonalDataCollectorWebApp.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="CosmosDb\Dto\RuleEngine\Factory\" />
+  </ItemGroup>
+
 </Project>
