--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 .idea/*
 WotPersonalDataCollectorTests/bin/*
 WotPersonalDataCollectorTests/obj/*
+WotPersonalDataCollectorWebApp.SharedKernel/bin/*
+WotPersonalDataCollectorWebApp.SharedKernel/obj/*
 WotPersonalDataCollectorWebApp.UnitTests/bin/*
 WotPersonalDataCollectorWebApp.UnitTests/obj/*
 WotPersonalDataCollector.sln.DotSettings.user
