--- a/WotPersonalDataCollectorWebApp/WotPersonalDataCollector.WebApp.csproj
+++ b/WotPersonalDataCollectorWebApp/WotPersonalDataCollector.WebApp.csproj
@@ -39,6 +39,9 @@
 	  <Folder Include="Views\Settings\" />
 	</ItemGroup>
 	<ItemGroup>
+	  <ProjectReference Include="..\WotPersonalDataCollector.SharedKernel\WotPersonalDataCollector.SharedKernel.csproj" />
+	</ItemGroup>
+	<ItemGroup>
 	  <Compile Update="Properties\Resources.Designer.cs">
 	    <DesignTime>True</DesignTime>
 	    <AutoGen>True</AutoGen>
