added new services

--- a/WotPersonalDataCollector.AzureMicroServicesFactory/WotPersonalDataCollector.AzureMicroServicesFactory.csproj
+++ b/WotPersonalDataCollector.AzureMicroServicesFactory/WotPersonalDataCollector.AzureMicroServicesFactory.csproj
@@ -18,7 +18,18 @@
       <CopyToPublishDirectory>Never</CopyToPublishDirectory>
     </None>
   </ItemGroup>
-  <ItemGroup>
+	<ItemGroup>
+		<AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+			<_Parameter1>WotPersonalDataCollector.AzureMicroServicesFactory.Tests</_Parameter1>
+		</AssemblyAttribute>
+	</ItemGroup>
+	<ItemGroup>
+		<AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+			<_Parameter1>DynamicProxyGenAssembly2</_Parameter1>
+		</AssemblyAttribute>
+	</ItemGroup>
+
+	<ItemGroup>
     <ProjectReference Include="..\WotPersonalDataCollector.SharedKernel\WotPersonalDataCollector.SharedKernel.csproj" />
   </ItemGroup>
 </Project>
