--- a/WotPersonalDataCollector.AzureMicroServicesFactory.Tests/WotPersonalDataCollector.AzureMicroServicesFactory.Tests.csproj
+++ b/WotPersonalDataCollector.AzureMicroServicesFactory.Tests/WotPersonalDataCollector.AzureMicroServicesFactory.Tests.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <ImplicitUsings>disable</ImplicitUsings>
+    <Nullable>disable</Nullable>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
@@ -18,6 +18,14 @@
     <PackageReference Include="NUnit.Analyzers" Version="3.3.0" />
     <PackageReference Include="coverlet.collector" Version="3.1.2" />
     <PackageReference Include="TddXt.Any.Extensibility" Version="6.7.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\WotPersonalDataCollector.AzureMicroServicesFactory\WotPersonalDataCollector.AzureMicroServicesFactory.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Authorization\" />
   </ItemGroup>
 
 </Project>
