--- a/WotPersonalDataCollector.AzureMicroServicesFactory.Tests/WotPersonalDataCollector.AzureMicroServicesFactory.Tests.csproj
+++ b/WotPersonalDataCollector.AzureMicroServicesFactory.Tests/WotPersonalDataCollector.AzureMicroServicesFactory.Tests.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\WotPersonalDataCollector.AzureMicroServicesFactory\WotPersonalDataCollector.AzureMicroServicesFactory.csproj" />
+    <ProjectReference Include="..\WotPersonalDataCollector.TestHelpers\WotPersonalDataCollector.TestHelpers.csproj" />
   </ItemGroup>
 
   <ItemGroup>
