--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 .idea/*
 WotPersonalDataCollectorTests/bin/*
 WotPersonalDataCollectorTests/obj/*
+WotPersonalDataCollector.TestHelpers/bin/*
+WotPersonalDataCollector.TestHelpers/obj/*
 WotPersonalDataCollector.SharedKernel/bin/*
 WotPersonalDataCollector.SharedKernel/obj/*
 WotPersonalDataCollector.SharedKernel.Tests/bin/*
